--- a/style.css
+++ b/style.css
@@ -81,7 +81,6 @@ img {
   height: 200px;
   display: flex;
   justify-content: center;
-  align-items: center;
   background-origin: border-box;
   background-clip: content-box, border-box;
   cursor: pointer;
@@ -123,7 +122,7 @@ img {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 0 auto;
+  margin: 0 auto 100px;
   width: 475px;
   background: url("./images/bg-triangle.svg") center 90px no-repeat;
 }
@@ -148,7 +147,7 @@ img {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 0 auto;
+  margin: 0 auto 100px;
   width: 660px;
   padding-top: 100px;
 }
@@ -161,7 +160,8 @@ img {
 }
 
 .result__board .player::before,
-.result__board .computer::before {
+.result__board .computer::before,
+.result__board-wait::before {
   content: attr(aria-label);
   position: absolute;
   top: -120px;
@@ -226,6 +226,16 @@ img {
 
 .result__box-btn:hover {
   color: hsl(349, 71%, 52%);
+}
+
+.result__board-wait {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.result__board-wait::before {
+  top: -90px;
 }
 
 /* class for winner */
@@ -333,4 +343,40 @@ img {
 
 .modal__dialog-image {
   margin: 0 auto;
+}
+
+.lds-ripple {
+  position: relative;
+  width: 300px;
+  height: 300px;
+}
+
+.lds-ripple div {
+  position: absolute;
+  border: 10px solid #fff;
+  background: #606E85;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+
+@keyframes lds-ripple {
+  0% {
+    top: 150px;
+    left: 150px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 300px;
+    height: 300px;
+    opacity: 0;
+  }
 }
