--- a/style.css
+++ b/style.css
@@ -755,6 +755,10 @@ img {
                 0 0 0 120px rgba(255, 255, 255, 0.02);
   }
 
+  img.modal__dialog-image {
+    width: 100%;
+  }
+
   .loader {
     position: relative;
     width: 130px;
