--- a/simple/style.css
+++ b/simple/style.css
@@ -77,13 +77,11 @@ img {
 
 .rock,
 .paper,
-.scissors,
-.lizard,
-.spock {
-  border: solid 15px transparent;
+.scissors {
+  border: solid 20px transparent;
   border-radius: 50%;
-  width: 150px;
-  height: 150px;
+  width: 200px;
+  height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -96,31 +94,20 @@ img {
 .paper {
   background-image: linear-gradient(#dadbdd, #f2edf1),
                     radial-gradient(circle at bottom center, hsl(230, 89%, 62%), hsl(230, 89%, 65%));
-  box-shadow: inset 0 6px rgba(0, 0, 0, 0.1), 0 6px rgba(86, 113, 245, 0.6);
+  box-shadow: inset 0 8px rgba(0, 0, 0, 0.1), 0 8px rgba(86, 113, 245, 0.6);
+  margin-bottom: 20px;
 }
 
 .scissors {
   background-image: linear-gradient(#dadbdd, #f2edf1),
                     radial-gradient(circle at bottom center, hsl(39, 89%, 49%), hsl(40, 84%, 53%));
-  box-shadow: inset 0 6px rgba(0, 0, 0, 0.1), 0 6px rgba(236, 169, 34, 0.6);
+  box-shadow: inset 0 8px rgba(0, 0, 0, 0.1), 0 8px rgba(236, 169, 34, 0.6);
 }
 
 .rock {
   background-image: linear-gradient(#dadbdd, #f2edf1),
                     radial-gradient(circle at bottom center, hsl(349, 71%, 52%), hsl(349, 70%, 56%));
-  box-shadow: inset 0 6px rgba(0, 0, 0, 0.1), 0 6px rgba(221, 64, 93, 0.6);
-}
-
-.lizard {
-  background-image: linear-gradient(#dadbdd, #f2edf1),
-                    radial-gradient(circle at bottom center, hsl(261, 73%, 60%), hsl(261, 72%, 63%));
-  box-shadow: inset 0 6px rgba(0, 0, 0, 0.1), 0 6px rgba(102, 51, 204, 0.6);
-}
-
-.spock {
-  background-image: linear-gradient(#dadbdd, #f2edf1),
-                    radial-gradient(circle at bottom center, hsl(189, 59%, 53%), hsl(189, 58%, 57%));
-  box-shadow: inset 0 6px rgba(0, 0, 0, 0.1), 0 6px rgba(41, 183, 208, 0.6);
+  box-shadow: inset 0 8px rgba(0, 0, 0, 0.1), 0 8px rgba(221, 64, 93, 0.6);
 }
 
 .paper div {
@@ -135,41 +122,17 @@ img {
   background-image: url("./images/icon-rock.svg");
 }
 
-.lizard div {
-  background-image: url("./images/icon-lizard.svg");
-}
-
-.spock div {
-  background-image: url("./images/icon-spock.svg");
-}
-
 .game__board {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 0 auto 50px;
-  width: 500px;
-  background: url("./images/bg-pentagon.svg") center 90px no-repeat;
-}
-
-.game__board button:nth-child(1) {
-  margin: 0 175px;
-}
-
-.game__board button:nth-child(2) {
-  margin-bottom: 30px;
+  max-width: 475px;
+  background: url("./images/bg-triangle.svg") center 90px no-repeat;
 }
 
 .game__board button:nth-child(3) {
-  margin-bottom: 30px;
-}
-
-.game__board button:nth-child(4) {
-  margin-left: 75px;
-}
-
-.game__board button:nth-child(5) {
-  margin-right: 75px;
+  margin: 0 auto;
 }
 
 .game__board button:hover {
@@ -177,11 +140,11 @@ img {
 }
 
 .game__board div {
-  width: 150px;
-  height: 150px;
+  width: 200px;
+  height: 200px;
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: 55px auto;
+  background-size: 65px auto;
 }
 
 .result__board {
@@ -372,7 +335,7 @@ img {
   flex-grow: 1;
   max-width: 400px;
   background: #fff;
-  padding: 25px 25px 50px;
+  padding: 25px 25px 35px;
   border-radius: 15px;
   position: relative;
   opacity: 0;
@@ -625,14 +588,14 @@ img {
   }
 }
 
-@media (max-width: 550px) {
+@media (max-width: 489px) {
   .score__board-numbers {
-    width: 130px;
+    width: 100px;
   }
 
   .game__board {
     margin: 0 auto 100px;
-    width: 100%;
+    width: auto;
     background-size: 60%;
     background-position: center 60px;
     padding: 0 10px;
@@ -640,39 +603,17 @@ img {
 
   .rock,
   .paper,
-  .scissors,
-  .lizard,
-  .spock {
+  .scissors {
     border: solid 10px transparent;
     border-radius: 50%;
-    width: 130px;
-    height: 130px;
-  }
-
-  .game__board button:nth-child(1) {
-    margin: 0 calc(50% - 60px);
-  }
-
-  .game__board button:nth-child(2) {
-    margin: 0 0 30px 30px;
-  }
-
-  .game__board button:nth-child(3) {
-    margin: 0 30px 30px 0;
-  }
-
-  .game__board button:nth-child(4) {
-    margin-left: calc(50% - 150px);
-  }
-
-  .game__board button:nth-child(5) {
-    margin-right: calc(50% - 150px);
+    width: 150px;
+    height: 150px;
   }
 
   .game__board div {
-    width: 130px;
-    height: 130px;
-    background-size: 45px auto;
+    width: 150px;
+    height: 150px;
+    background-size: 50px auto;
   }
 
   .result__board .player,
@@ -762,108 +703,32 @@ img {
   }
 }
 
-/* !!! */
-
-@media (max-width: 510px) {
+@media (max-width: 425px) {
   .game__board {
-    width: 100%;
-    padding: 0 0;
-    background-size: 55%;
-    background-position: center 50px;
+    padding: 0;
+  }
+}
+
+@media (max-width: 380px) {
+  .score__board-numbers {
+    width: 80px;
+  }
+
+  .game__board {
+    margin: 0 auto 50px;
+    padding: 0;
   }
 
   .rock,
   .paper,
-  .scissors,
-  .lizard,
-  .spock {
-    width: 100px;
-    height: 100px;
-  }
-
-  .game__board button:nth-child(1) {
-    margin: 0 calc(50% - 50px);
-  }
-
-  .game__board button:nth-child(2) {
-    margin: 0 0 30px calc(50% - 170px);
-  }
-
-  .game__board button:nth-child(3) {
-    margin: 0 calc(50% - 170px) 30px 0;
-  }
-
-  .game__board button:nth-child(4) {
-    margin-left: calc(50% - 130px);
-  }
-
-  .game__board button:nth-child(5) {
-    margin-right: calc(50% - 130px);
+  .scissors {
+    width: 130px;
+    height: 130px;
   }
 
   .game__board div {
-    width: 100px;
-    height: 100px;
-    background-size: 35px auto;
-  }
-}
-
-/* !!! */
-
-@media (max-width: 430px) {
-  .game__board {
-    background-size: 60%;
-  }
-
-  .game__board button:nth-child(2) {
-    margin-bottom: 20px;
-  }
-
-  .game__board button:nth-child(3) {
-    margin-bottom: 20px;
-  }
-}
-
-@media (max-width: 380px) {
-  .game__board {
-    background-size: 65%;
-  }
-
-  .game__board button:nth-child(2) {
-    margin-bottom: 10px;
-  }
-
-  .game__board button:nth-child(3) {
-    margin-bottom: 10px;
-  }
-}
-
-@media (max-width: 365px) {
-  .game__board {
-    background-size: 70%;
-  }
-
-  .game__board button:nth-child(2) {
-    margin-left: 10px;
-  }
-
-  .game__board button:nth-child(3) {
-    margin-right: 10px;
-  }
-
-  .game__board button:nth-child(4) {
-    margin-left: 40px;
-  }
-
-  .game__board button:nth-child(5) {
-    margin-right: 40px;
-  }
-}
-
-
-@media (max-width: 380px) {
-  .score__board-numbers {
-    width: 100px;
+    width: 130px;
+    height: 130px;
   }
 
   .result__board, .result__finish {
